--- a/TSAR/Views/Files/Create.cshtml
+++ b/TSAR/Views/Files/Create.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Create";
     Layout = "~/Views/Shared/_LayoutOther.cshtml";
 }
-<h2>Create</h2>
+<h2>Add a new document</h2>
 
 @using (Html.BeginForm("Create", "Files", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
