--- a/TSAR/Views/Travel/Create.cshtml
+++ b/TSAR/Views/Travel/Create.cshtml
@@ -7,7 +7,6 @@
 
 }
 
-<h2>Create</h2>
 
 
 @using (Html.BeginForm())
@@ -15,7 +14,7 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Travel</h4>
+        <h4>Add New Travel</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -92,7 +91,6 @@
 
         </div>
         <div align="center">
-
 
 
             <input type="submit" id="btn" value="Create" , class="btn btn-primary" />
