--- a/TSAR/Views/Budget/Create.cshtml
+++ b/TSAR/Views/Budget/Create.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_LayoutOther.cshtml";
 }
 
-<h2>Create</h2>
+<h2>Create a new budget</h2>
 
 
 @using (Html.BeginForm())
@@ -13,7 +13,7 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Budget</h4>
+       
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
@@ -49,7 +49,7 @@
     </div>
     <div class="form-group">
         <div align="center">
-            <input type="submit" value="Create" class="btn btn-primary" />
+            <input type="submit" id="btn" value="Create" , class="btn btn-primary" />
         </div>
 
     </div>
