--- a/TSAR/Views/Clients/Create.cshtml
+++ b/TSAR/Views/Clients/Create.cshtml
@@ -5,14 +5,14 @@
     Layout = "~/Views/Shared/_LayoutOther.cshtml";
 }
 <script src="~/Scripts/jquery-1.7.1.min.js"></script>
-<h2>Create</h2>
+<h2>Add A new Client</h2>
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
 
     <div class="form-horizontal">
-        <h4>Client</h4>
+        <h4></h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
