--- a/TSAR/Views/Commissions/Create.cshtml
+++ b/TSAR/Views/Commissions/Create.cshtml
@@ -5,14 +5,14 @@
     Layout = "~/Views/Shared/_LayoutOther.cshtml";
 }
 
-<h2>Create</h2>
+<h2>Create new commisson</h2>
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Commission</h4>
+       
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -28,7 +28,7 @@
         <div class="form-group">
             <div align="center">
             @*<div class="col-md-offset-2 col-md-10">*@
-            <input type="submit" value="Create" class="btn btn-primary"/>
+                <input type="submit" id="btn" value="Create" , class="btn btn-primary" />
         </div>
         </div>
     </div>
