--- a/TSAR/Views/Timesheets/Create.cshtml
+++ b/TSAR/Views/Timesheets/Create.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_LayoutOther.cshtml";
 }
 
-<h2>Create</h2>
+<h2>Create A New Timesheet</h2>
 
 
 @using (Html.BeginForm()) 
@@ -13,7 +13,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Timesheet</h4>
+        
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @*<div class="form-group">
@@ -112,7 +112,7 @@
         <div class="form-group">
             <div align="center">
                 @*<div class="col-md-offset-2 col-md-10">*@
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" id="btn" value="Create" , class="btn btn-primary" />
                 @*</div>*@
             </div>
             </div>
