--- a/TSAR/Views/Timesheets/Index.cshtml
+++ b/TSAR/Views/Timesheets/Index.cshtml
@@ -12,70 +12,71 @@
         <a id="button" href="@Url.Action("Create")" class="btn btn-primary">Create</a>
     </div>
 </p>
-<table class="table">
-    <tr>
-        <th>
-            <font color="white">        @Html.DisplayNameFor(model => model.Client.ClientName)</font>
-        </th>
-        <th>
-            <font color="white">         @Html.DisplayNameFor(model => model.Consultant.FullName)</font>
-        </th>
-        <th>
-            <font color="white">     @Html.DisplayNameFor(model => model.CaptureDate)</font>
-        </th>
-        <th>
-            <font color="white">       @Html.DisplayNameFor(model => model.StartTime)</font>
-        </th>
-        <th>
-            <font color="white">       @Html.DisplayNameFor(model => model.EndTime)</font>
-        </th>
-        <th>
-            <font color="white">    @Html.DisplayNameFor(model => model.ActivityDescription)</font>
-        </th>
-        <th>
-            <font color="white">     @Html.DisplayNameFor(model => model.Total)</font>
-        </th>
-        <th>
-            <font color="white">    @Html.DisplayNameFor(model => model.Hours)</font>
-        </th>
-        <th>
-            <font color="white">    @Html.DisplayNameFor(model => model.TicketReference)</font>
-        </th>
-        <th></th>
-        <th></th>
-    </tr>
-
-    @foreach (var item in Model)
-    {
+<div style="overflow-x: auto">
+    <table class="table bg-light-gray">
         <tr>
-            <td>
-                <font color="gold">      @Html.DisplayFor(modelItem => item.Client.ClientName)</font>
-            </td>
-            <td>
-                <font color="gold">      @Html.DisplayFor(modelItem => item.Consultant.FirstName)</font>
-            </td>
-            <td>
-                <font color="gold">     @Html.DisplayFor(modelItem => item.CaptureDate)</font>
-            </td>
-            <td>
-                <font color="gold">     @Html.DisplayFor(modelItem => item.StartTime)</font>
-            </td>
-            <td>
-                <font color="gold">        @Html.DisplayFor(modelItem => item.EndTime)</font>
-            </td>
-            <td>
-                <font color="gold">      @Html.DisplayFor(modelItem => item.ActivityDescription)</font>
-            </td>
-            <td>
-                <font color="gold">     @Html.DisplayFor(modelItem => item.Total)</font>
-            </td>
-            <td>
-                <font color="gold">    @Html.DisplayFor(modelItem => item.Hours)</font>
-            </td>
-            <td>
-                <font color="gold">    @Html.DisplayFor(modelItem => item.TicketReference)</font>
-            </td>
-            <td>
+            <th>
+                <font color="white">        @Html.DisplayNameFor(model => model.Client.ClientName)</font>
+            </th>
+            <th>
+                <font color="white">         @Html.DisplayNameFor(model => model.Consultant.FullName)</font>
+            </th>
+            <th>
+                <font color="white">     @Html.DisplayNameFor(model => model.CaptureDate)</font>
+            </th>
+            <th>
+                <font color="white">       @Html.DisplayNameFor(model => model.StartTime)</font>
+            </th>
+            <th>
+                <font color="white">       @Html.DisplayNameFor(model => model.EndTime)</font>
+            </th>
+            <th>
+                <font color="white">    @Html.DisplayNameFor(model => model.ActivityDescription)</font>
+            </th>
+            <th>
+                <font color="white">     @Html.DisplayNameFor(model => model.Total)</font>
+            </th>
+            <th>
+                <font color="white">    @Html.DisplayNameFor(model => model.Hours)</font>
+            </th>
+            <th>
+                <font color="white">    @Html.DisplayNameFor(model => model.TicketReference)</font>
+            </th>
+            <th></th>
+            <th></th>
+        </tr>
+
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                         @Html.DisplayFor(modelItem => item.Client.ClientName)
+                </td>
+                <td>
+                        @Html.DisplayFor(modelItem => item.Consultant.FirstName)
+                </td>
+                <td>
+                         @Html.DisplayFor(modelItem => item.CaptureDate)
+                </td>
+                <td>
+                       @Html.DisplayFor(modelItem => item.StartTime)
+                </td>
+                <td>
+                           @Html.DisplayFor(modelItem => item.EndTime)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ActivityDescription)
+                </td>
+                <td>
+            @Html.DisplayFor(modelItem => item.Total)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Hours)
+                </td>
+                <td>
+                       @Html.DisplayFor(modelItem => item.TicketReference)
+                </td>
+               
                 <td>
                     <input type="button" title="Edit" value="Edit" class="btn btn-primary" onclick="location.href='@Url.Action("Edit", "Timesheets", new { id = item.TimesheetId })'" />
 
@@ -84,10 +85,10 @@
 
                     <input type="button" title="Delete" value="Delete" class="btn btn-primary" onclick="location.href='@Url.Action("Delete", "Timesheets", new { id = item.TimesheetId })'" />
                 </td>
-            </td>
-        </tr>
-    }
+              
+            </tr>
+        }
 
-</table>
-
+    </table>
+    </div>
 
